--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-flv-player": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "node-media-server": "^2.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-media-server": "^2.2.4"
   }
 }
